--- a/styles.css
+++ b/styles.css
@@ -20,6 +20,7 @@
 body {
   background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)),
     url(https://sadka-jaria.com/wp-content/themes/os-company/assets/sadka-images/sec-1-bg.jpg);
+    background-size: cover;
   font-family: "Tajawal", sans-serif;
 }
 
