--- a/styles.css
+++ b/styles.css
@@ -14,7 +14,7 @@
 
 * {
   margin: 0;
-  padding: 0;
+  padding: 0px;
 }
 
 body {
@@ -25,11 +25,10 @@ body {
 }
 
 .main-img img {
-  width: 600px;
+  width: 500px;
   height: 400px;
   /* border: red solid 3px; */
-  margin: 2rem;
-  padding: 2rem;
+  margin: 1rem;
   padding-bottom: 0;
   margin-bottom: 0;
 }
@@ -38,7 +37,6 @@ body {
   color: var(--color);
   text-align: center;
   margin: 1rem;
-  padding: 1rem;
 }
 .p1 {
   font-size: 3rem;
@@ -60,7 +58,7 @@ body {
 
 .grid {
   display: grid;
-  grid-template-columns: 2fr 2fr 2fr;
+  grid-template-columns: 1.5fr 1.5fr 1.5fr;
   gap: 20px;
   width: 1/3;
   /* border: red solid 3px; */
